--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </fieldset>
                         <fieldset class="right-field">
                             <label for="lastname">Last name</label>
-                            <input id="lastname" name="lastname" type="text" required placeholder="Insert name"> 
+                            <input id="lastname" name="lastname" type="text" required placeholder="Insert last name"> 
         
                             <label for="tel">Phone number</label>
                             <input id="tel" name="tel" type="tel" required placeholder="+39 123 456 78"> 
